tests/correctness/reject/parse_bad_expr.keel
def main(sys: System); Io:
    x = 1 + + +
    println(x)
